refactor logout and me api
refactor logout and me api